Add options popup

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
     "manifest_version": 3,
-    "name": "Simple Twitch Adblock",
-    "description": "An extension to block Twitch ads. Done the simplest possible way to avoid Twitch countermeasures.",
+    "name": "Simple Twitch Adblocker",
+    "description": "An extension to block Twitch ads. Done the simplest possible way to avoid Twitch countermeasures. Ads will be automatically muted and the stream will continue playing over them (in lower resolution due to Twitch limitations).",
     "version": "1.0.0",
     "action": {
         "default_icon": {},
-        "default_title": "Simple Twitch Adblock"
+        "default_title": "Simple Twitch Adblocker",
+        "default_popup": "settings/index.html"
     },
     "content_scripts": [
         {
@@ -13,13 +14,20 @@
                 "*://www.twitch.tv/*"
             ],
             "js": [
-                "index.js"
+                "script/index.js"
             ],
             "css": [
-                "styles.css"
+                "script/styles.css"
             ]
         }
     ],
-    "permissions": [],
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "{1c817264-c81a-4cbb-a02f-a1fea8f7b27b}"
+        }
+    },
+    "permissions": [
+        "storage"
+    ],
     "host_permissions": []
 }
