--- a/manifest.json
+++ b/manifest.json
@@ -35,5 +35,7 @@
     "permissions": [
         "storage"
     ],
-    "host_permissions": []
+    "host_permissions": [
+        "*://www.twitch.tv/*"
+    ]
 }
